--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        hola estudiantes, este es mi sitio wed
+        hola amigos y amigas, este es mi sitio wed
         sigueme en ig como rockiejaja
     </p>
 </body>
