cambios agregamos sitio de twitch

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <p>
         hola amigos y amigas, este es mi sitio wed
-        sigueme en ig como rockiejaja
+        sigueme en ig como rockiejaja y en twitch como rockiejaja
     </p>
 </body>
 </html>
